<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNewPsw"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginVertical="20dp"
        android:fontFamily="sans-serif-black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:id="@+id/llPasw"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNewPsw"
            android:hint="@string/etNewPsw"
            android:minLines="1"
            android:maxLength="10"
            android:textColorHint="@color/sky_blue"
            android:textColor="@color/white"
            android:layout_marginVertical="20dp"
            android:padding="20dp"
            android:textSize="20sp"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etConPsw"
            android:minLines="1"
            android:maxLength="10"
            android:hint="@string/etConPsw"
            android:textColorHint="@color/sky_blue"
            android:textColor="@color/white"
            android:padding="20dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate"
            android:hint="@string/btnUpdate"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:textSize="20sp"
            android:textColorHint="@color/blue"
            android:backgroundTint="@color/sky_blue"

            />
    </LinearLayout>


</LinearLayout>