<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tvForget1"
        android:textColor="@color/blue"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/llForget"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"  >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/etEmail3"
        android:textSize="20sp"
        android:hint="@string/etEmail"
        android:layout_marginTop="120dp"
        android:textColorHint="@color/sky_blue"
        android:textColor="@color/white"  />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnForget"
            android:hint="@string/btnForget"
            android:backgroundTint="@color/sky_blue"
            android:layout_margin="30dp"
            android:textSize="20sp"
            android:paddingHorizontal="55dp"
            android:paddingVertical="15dp"
            android:textColorHint="@color/blue"
            />



    </LinearLayout>
</LinearLayout>