<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstPageActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:textColor="@color/sky_blue"
        android:layout_weight="3"
        android:gravity="center"
        android:textSize="50sp"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llBtn"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:hint="@string/btnLogin"
        android:backgroundTint="@color/blue"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:paddingHorizontal="55dp"
        android:paddingVertical="15dp"
        android:textColorHint="@color/white"
        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignup"
            android:layout_margin="10dp"
            android:hint="@string/btnSignup"
            android:textSize="20sp"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:backgroundTint="@color/blue"
            android:textColorHint="@color/white"
            />
    </LinearLayout>
</LinearLayout>